# bit_with_vim

./: .gitignore  README.md  go.mod
cmd/huffman/: main.go
cmd/particle/: main.go
cmd/tcp/: main.go
lua/vim/: init.lua  state.lua  utils.lua
lua/vim/tests/: utils.lua
lua/vim/ui/: float.lua  window.lua
lua/vim/ui/tests/: ui_spec.lua
pkg/assert/: assert.go
pkg/encoding/buffer/: frequency.go  iterator_test.go
pkg/encoding/huffman/: huffman.go  huffman_node.go  huffman_table.go  huffman_test.go
pkg/encoding/utils/: byte_reader.go  byte_writer.go
pkg/particles/: coffee.go  particles.go
pkg/tcp/: tcp.go  tcp_test.go
tor/: README.md  go.mod  test.torrent
tor/cmd/bittorrent/: main.go
tor/go/: go.sum
tor/go/pkg/command/: command.go  command_test.go  handshake.go  peers.go  utils.go
tor/go/pkg/decode/: decode.go
tor/pkg/command/: command.go  utils.go
tor/pkg/decode/: decode.go  decode_test.go
tor/rust/src/: bitmap.rs  cli.rs  lib.rs  main.rs  peer.rs  torrent.rs
tor/rust/src/my_serde_bencode/: error.rs
tor/tests/: decode_test.go
torus/: Cargo.toml
torus/src/: bencode.rs  command.rs  main.rs  torrent.rs  tracker.rs
torus/src/my_serde_bencode/: de.rs
